fix(17track): remove generated name and change some grouping

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -163,7 +163,7 @@
 		  background-color: @crust !important;
 		}
 
-		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover, .bg-\[\#EFF6FF\], [data-sidebar="menu-sub-button"]:hover, ._codeMirror_1mws9_1 .cm-line:nth-child(2n) {
+		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover, .bg-\[\#EFF6FF\], [data-sidebar="menu-sub-button"]:hover, .cm-line:nth-child(2n) {
       background-color: @mantle !important;
 		}
 
@@ -175,7 +175,7 @@
 		  color: @base !important;
 		}
 
-		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover, [data-sidebar="menu-sub-button"]:hover, .cm-gutterElement {
+		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover, [data-sidebar="menu-sub-button"]:hover {
 		  color: @subtext1 !important;
 		}
 
@@ -216,6 +216,10 @@
 		.ͼ20, .cm-placeholder, [style="color: rgb(161, 161, 170); background-color: rgb(255, 255, 255);"] {
 			background-color: @base !important;
 			color: @text !important;
+		}
+
+		.cm-gutterElement {
+			color: @subtext1 !important;
 		}
 
 		.bg-zinc-400 {
