Pushing vgen vsona theme start.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -1,11 +1,11 @@
 /* ==UserStyle==
-@name VGen Catppuccin
+@name VGen/VSona Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/vgen
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/vgen
 @version 2025.09.06
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/vgen/catppuccin.user.less
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Avgen
-@description Soothing pastel theme for VGen
+@description Soothing pastel theme for VGen and VSona
 @author Catppuccin
 @license MIT
 
@@ -33,7 +33,7 @@
     #lib.palette();
     #lib.defaults();
 
-    *:not(img, svg, video, .notificationDot) {
+    *:not(img, svg *, video, .notificationDot) {
       color: @text;
       fill: @text;
       stroke: @text;
@@ -48,6 +48,7 @@
       border-color: transparent !important;
     }
 
+    .bdPBiQ .filters,
     .khYhRB,
     .filtersBar {
       background-image: unset !important;
@@ -58,29 +59,155 @@
       background-color: @overlay1 !important;
     }
 
+    .jYGKfA {
+      background-color: @mantle !important;
+    }
+
     body,
     content,
-    content p {
+    content p,
+    .emHfIl {
       color: @text !important;
       fill: @text !important;
       stroke: @text !important;
       background-color: @base !important;
     }
 
-    .hrsGzu,
-    img,
-    video {
-      background-color: transparent !important;
+    // LIGHT TOGGLE
+    .dpyhEo {
+      background-color: @text !important;
+
+      svg * {
+        fill: @base !important;
+      }
     }
 
-    .khYhRB,
-    .filtersBar {
-      background-image: unset !important;
-      background-color: transparent !important;
+    // DARK TOGGLE
+    .eBYodn {
+      background-color: @base !important;
+
+      svg * {
+        fill: @text !important;
+      }
     }
 
-    hr, .divider {
-      background-color: @overlay1 !important;
+    // SYSTEM TOGGLE WORKS AS NORMAL CHIP SELECT, C.F. FURTHER BELOW.
+
+    .serviceBody .infoContainer .infoContainerInner .mainInfo {
+      .serviceName {
+        color: @text !important;
+      }
+
+      .basePrice {
+        color: @subtext0 !important;
+      }
+    }
+
+    .mainModalContent .detailsColumn .creatorSection .paymentOptions {
+      border-color: @overlay0 !important;
+
+      * {
+        filter: unset;
+      }
+
+      p {
+        color: @text !important;
+      }
+    }
+
+    .mainModalContent .detailsColumn .tosCheckbox {
+      background-color: @surface1 !important;
+      border-color: @overlay0 !important;
+
+      .checkboxText {
+        color: @text !important;
+      }
+
+      &:has(> input:checked + .checkbox) {
+        background-color: @accent !important;
+
+        .checkboxText {
+          color: @base !important;
+        }
+      }
+    }
+
+    :is(.hHuIfY, .lhbURp) .linkInner .title,
+    .personalNoteGroup .personalNotes .personalNote pre,
+    .mainModalContent .detailsColumn .creatorSection .personalMessage p,
+    .bio {
+      color: @text !important;
+    }
+
+    .mainModalContent {
+      h2 {
+        color: @accent !important;
+      }
+
+      .subHeadings .subHeading {
+        color: @subtext0 !important;
+      }
+    }
+
+    // VGEN'S STYLISED UL LI A LINKS
+    li > a {
+      color: @text !important;
+
+      &:hover {
+        span {
+          color: @accent !important;
+        }
+
+        svg *, img * {
+          fill: @accent !important;
+          stroke: @accent !important;
+        }
+      }
+
+      &:active, &:focus {
+        span {
+          color: darken(@accent, 5%) !important;
+        }
+
+        svg *, img * {
+          fill: darken(@accent, 5%) !important;
+          stroke: darken(@accent, 5%) !important;
+        }
+      }
+    }
+
+    .mainModalContent
+      .detailsColumn
+      .creatorSection
+      .creatorDetails
+      > .center
+      > .nameContainer
+      .displayNameContainer
+      .displayName {
+      color: @text !important;
+    }
+
+    .username {
+      color: @subtext0 !important;
+    }
+
+    .titleContainer {
+      .userContainer .userInfo {
+        .artistUsername {
+          color: @subtext0 !important;
+        }
+
+        &:hover .artistUsername {
+          color: @accent !important;
+        }
+
+        .userText .artistDisplayNameContainer .artistDisplayName {
+          color: @text !important;
+        }
+      }
+      .title {
+        color: @text !important;
+      }
     }
 
     .BaseIcon__StyledSvg-sc-6d6731c3-0.bxRwyH {
@@ -108,18 +235,24 @@
       }
     }
 
-    .kUXBIh + .checkbox {
+    input + .checkbox {
       background-color: @surface0 !important;
-      border: none !important;
+      border-color: @overlay0 !important;
+
+      svg.checkmark path {
+        fill: @text !important;
+        stroke: @text !important;
+      }
     }
 
-    .kUXBIh input:checked + .checkbox {
+    input:checked + .checkbox {
       background-color: @accent !important;
-    }
+      border-color: @accent !important;
 
-    .kUXBIh .checkbox .checkmark path {
-      fill: @base !important;
-      stroke: @base !important;
+      svg.checkmark path {
+        fill: @base !important;
+        stroke: @base !important;
+      }
     }
 
     table:not(.lnfAug) {
@@ -138,6 +271,39 @@
       }
     }
 
+    .cRsFty .card {
+      .upperCard {
+        .upperCardText {
+          .nextText {
+            color: @subtext0 !important;
+          }
+
+          .questName {
+            color: @text !important;
+          }
+        }
+
+        svg.arrowIcon * {
+          fill: @text !important;
+          stroke: @text !important;
+        }
+      }
+
+      .lowerCard .percentageText {
+        color: @subtext0 !important;
+      }
+    }
+
+    // BUBBLES
+    .AnnouncementBubble__Bubble-sc-c8b6e5ad-1 {
+      background-color: @surface0 !important;
+    }
+
+    svg.announcementTail * {
+      fill: @surface0 !important;
+      stroke: @surface0 !important;
+    }
+
     // deno-fmt-ignore
     svg.blurredBubble foreignObject div {
       filter: @surface0-filter !important;
@@ -149,10 +315,14 @@
     }
 
     // SURFACE0 SECTIONS
+    .cRsFty,
+    .requestForm,
+    .ModalBase__ModalStyle-sc-cf8b5bd2-1,
     .ljJZpn,
     .iFmoSC,
     .jPgPNs,
     .menuContainer .contentSections,
+    .menuContainer .contentSections .linkSection,
     .hpNMkG,
     .dATwxN,
     .iEvEYV .sectionContainer,
@@ -168,9 +338,14 @@
     .kiBQyr,
     .grSsYu {
       background-color: @surface0 !important;
+      border-color: @overlay0 !important;
     }
 
     // SURFACE1 SECTIONS
+    :is(.hHuIfY, .lhbURp) .linkInner:hover,
+    .personalNoteGroup .personalNotes .personalNote,
+    .mainModalContent .detailsColumn .creatorSection .personalMessage,
+    .UserBadgeBaseCard__Card-sc-42f00c59-0,
     .gRqLQd,
     .mainModalContent .conceptDetailsColumn,
     .characterCard,
@@ -203,6 +378,7 @@
       .str-chat__message-reactions
       .str-chat__message-reaction {
       background-color: @surface1 !important;
+      border-color: @overlay0 !important;
     }
 
     // SURFACE2 SECTIONS
@@ -213,22 +389,28 @@
       .str-chat__message-reactions-options
       .str-chat__message-reactions-option:hover {
       background-color: @surface2 !important;
+      border-color: @overlay0 !important;
     }
 
     // BASE SECTIONS
+    .primaryContentSection,
     .jJGjin {
       background-color: @base !important;
+      border-color: @overlay0 !important;
     }
 
     // MANTLE SECTIONS
+    .lhbURp .linkInner,
     .mainContent,
     .lgEpwA,
     .kbXrba .mainModalContent .commissionSideColumn .userInfoGroup,
     .iEvEYV .taggedCharactersSection {
       background-color: @mantle !important;
+      border-color: @overlay0 !important;
     }
 
     // GRADIENT ELEMENTS
+    .fxdoUV .mainContentContainer > .mainContent .bannerContainer .statusBanner,
     .iOtNJw.notistack-MuiContent,
     .bsGOTS {
       color: @base !important;
@@ -247,9 +429,8 @@
     }
 
     // ACCENT ELEMENTS
+    .eyhMkl,
     .bjjDub,
-    .bFXMKY .mainContentContainer > .mainContent .bannerContainer .statusBanner,
-    .filtersContainer .filterMenuLink.active,
     .fexemQ .badge {
       color: @base !important;
       background-image: unset !important;
@@ -270,6 +451,7 @@
     .efHLBf {
       background-image: unset !important;
       background-color: @red !important;
+      border-color: @red !important;
 
       :not(button, button *) {
         color: @base !important;
@@ -279,9 +461,12 @@
     }
 
     // YELLOW ELEMENTS
+    .iGWlny,
+    .brHUsv,
     .jIZCAk {
       background-image: unset !important;
       background-color: @yellow !important;
+      border-color: @yellow !important;
 
       :not(button, button *) {
         color: @base !important;
@@ -291,11 +476,15 @@
     }
 
     // PEACH ELEMENTS
+    .bQhQFh,
+    .juLaFF .mainContentContainer > .mainContent .bannerContainer .statusBanner,
+    .cpsgnE,
     .cGsYNF,
     .hLuxbv,
     .igoiuH {
       background-image: unset !important;
       background-color: @peach !important;
+      border-color: @peach !important;
 
       :not(button, button *) {
         color: @base !important;
@@ -305,6 +494,11 @@
     }
 
     // GREEN ELEMENTS
+    .gsAYUW,
+    .kBdnkW,
+    .bFXMKY .mainContentContainer > .mainContent .bannerContainer .statusBanner,
+    .hMIEAk,
+    .keIQsd,
     .eINUqO > .formLabel .formField,
     .eoQLjX,
     .iOtNJw.notistack-MuiContent-success,
@@ -315,6 +509,7 @@
       color: @base !important;
       background-image: unset !important;
       background-color: @green !important;
+      border-color: @green !important;
 
       :not(button, button *) {
         color: @base !important;
@@ -381,10 +576,32 @@
       background-color: @surface1 !important;
     }
 
-    // BUTTONS
-    .dgAcRG,
-    .kagxcm .filtersContainer .filterMenuLink,
-    :not(.str-chat__message-reaction) > button {
+    .notificationContent
+      .textSectionContainer
+      .textSectionContents
+      .textSection
+      .notificationTitle
+      a {
+      color: @accent !important;
+    }
+
+    // UNREAD NOTIFICATIONS
+    .dWGpMh .notificationContent {
+      color: @text !important;
+      background-image: unset !important;
+      background-color: @surface1 !important;
+
+      &:hover {
+        background-color: @surface2 !important;
+
+        &:active, &:focus {
+          background-color: @overlay0 !important;
+        }
+      }
+    }
+
+    // READ NOTIFICATIONS
+    .iKnxmQ .notificationContent {
       color: @text !important;
       background-image: unset !important;
       background-color: @surface0 !important;
@@ -398,6 +615,41 @@
       }
     }
 
+    // BUTTONS
+    .formLabel button.formField,
+    .dgAcRG,
+    .kagxcm .filtersContainer .filterMenuLink,
+    :not(.str-chat__message-reaction, .fgGMZO, .dbQApQ) > button {
+      color: @text !important;
+      background-image: unset !important;
+      background-color: @surface0 !important;
+
+      &:hover {
+        background-color: @surface1 !important;
+
+        &:active, &:focus {
+          background-color: @surface2 !important;
+        }
+      }
+    }
+
+    // SURFACE1 BUTTONS
+    .gXZdsE,
+    .fgGMZO,
+    .dbQApQ {
+      color: @text !important;
+      background-image: unset !important;
+      background-color: @surface1 !important;
+
+      &:hover {
+        background-color: @surface2 !important;
+
+        &:active, &:focus {
+          background-color: @overlay0 !important;
+        }
+      }
+    }
+
     /**
      * FIXME: .cUpKKJ seems to be refusing to change.
      * .cUpKKJ.RichTextEditor__EditorContainer_<hash>-5
@@ -407,7 +659,7 @@
 
     // TEXTAREAS
     .cUpKKJ,
-    .formLabel .formField,
+    .formLabel :is(input, textarea).formField,
     .inputContainer,
     .str-chat__message-textarea-with-emoji-picker,
     input[type="text"],
@@ -423,7 +675,7 @@
         background-color: @surface2 !important;
 
         .cUpKKJ,
-        .formLabel .formField,
+        .formLabel :is(input, textarea).formField,
         .inputContainer,
         .str-chat__message-textarea-with-emoji-picker,
         input[type="text"],
@@ -434,7 +686,30 @@
     }
 
     // DROPDOWN CONTAINERS
+    .selectWrapper {
+      .formField {
+        color: @text !important;
+        background-color: @surface0 !important;
+
+        .SortDropdown__OptionText-sc-5d6d1713-4 {
+          &:hover {
+            background-color: @surface1 !important;
+          }
+
+          &:active, &:focus {
+            background-color: @surface2 !important;
+          }
+        }
+      }
+
+      svg.downArrow * {
+        fill: @text !important;
+        stroke: @text !important;
+      }
+    }
+
     .SortDropdown__FloatingContainer-sc-5d6d1713-3 {
+      color: @text !important;
       background-color: @surface0 !important;
 
       .SortDropdown__OptionText-sc-5d6d1713-4 {
@@ -448,7 +723,7 @@
       }
     }
 
-    // SLIDER
+    // SLIDERS
     .slider {
       background-color: @overlay0 !important;
 
@@ -471,6 +746,25 @@
       }
     }
 
+    .progressBar {
+      // FIXME: This just doesn't work, bar writes on top of filling, and progressBar itself doesn't change with color.
+      // ?Try z-index?
+      .bar {
+        background-color: fade(@overlay0, 30%) !important;
+      }
+
+      .filling {
+        background-image: linear-gradient(
+          225deg,
+          @blue 0%,
+          @mauve 53.65%,
+          @red 100%
+        ) !important;
+
+        background-color: @overlay0 !important;
+      }
+    }
+
     // CHIP SELECT
     .inputContainer:has(> label.option + label.option) {
       color: @subtext0 !important;
@@ -485,7 +779,7 @@
           background-color: @surface2 !important;
         }
 
-        &:has(> input[checked]) {
+        &.RoGou, &.fSGnyo, &.fBnvNt {
           background-color: @accent !important;
 
           :not(button, button *) {
@@ -493,17 +787,69 @@
             fill: @base !important;
             stroke: @base !important;
           }
+
+          &:hover {
+            background-color: darken(@accent, 5%) !important;
+          }
+        }
+      }
+    }
+
+    // TOGGLES
+    .BookmarkServiceBadge__Container-sc-c771ec8c-0,
+    .filtersContainer .filterMenuLink {
+      color: @text !important;
+      background-image: unset !important;
+      background-color: @surface0 !important;
+      border-color: @overlay0 !important;
+
+      :not(button, button *) {
+        color: @text !important;
+        fill: @text !important;
+        stroke: @text !important;
+      }
+
+      &:hover {
+        background-color: @surface1 !important;
+
+        &:active, &:focus {
+          background-color: @surface2 !important;
+        }
+      }
+
+      &.active {
+        color: @base !important;
+        background-color: @accent !important;
+        border-color: @accent !important;
+
+        :not(button, button *) {
+          color: @base !important;
+          fill: @base !important;
+          stroke: @base !important;
         }
 
-        // Weird chips that are multiselect-togglable
-        &.fSGnyo {
+        &:hover {
           background-color: darken(@accent, 5%) !important;
 
-          :not(button, button *) {
-            color: @base !important;
-            fill: @base !important;
-            stroke: @base !important;
+          &:active, &:focus {
+            background-color: darken(@accent, 10%) !important;
           }
+        }
+      }
+    }
+
+    .menuContainer .contentSections {
+      .upper > h3.heading {
+        color: @accent !important;
+      }
+
+      .mainSection {
+        .displayName {
+          color: @text !important;
+        }
+
+        .lastMsg, .lastMsg span {
+          color: @subtext0 !important;
         }
       }
     }
@@ -611,8 +957,18 @@
       color: @subtext0 !important;
     }
 
-    .ewnnA {
-      border-color: @accent !important;
+    .Tabs__Tab-sc-df5c1d53-3 {
+      .tabTitle {
+        color: @subtext0 !important;
+      }
+
+      &.active {
+        border-color: @accent !important;
+
+        .tabTitle {
+          color: @text !important;
+        }
+      }
     }
 
     .byhiJW {
@@ -785,15 +1141,8 @@
       color: @subtext0 !important;
     }
 
-    .statusIcon[type="pictureInPicture"] {
-      background-image: url(chrome://global/skin/media/picture-in-picture-open.svg)
-        !important;
-    }
-
     /* Overlay Play button */
     .clickToPlay {
-      background-image: url(chrome://global/skin/media/play-fill.svg)
-        !important;
       background-color: @surface0;
     }
 
