fix(codeberg): set colour for svg elements in ui.secondary.menu

--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -56,6 +56,10 @@
       color: var(--color-black);
     }
 
+    .ui.secondary.menu svg.svg {
+      color: var(--color-black);
+    }
+
     .ui.basic.red.buttons .button,
     .ui.basic.red.button {
       &:hover,
