fix(kubernetes): enhance Catppuccin theme with new feature box and heading styles

--- a/styles/kubernetes/catppuccin.user.less
+++ b/styles/kubernetes/catppuccin.user.less
@@ -224,6 +224,10 @@
       }
     }
 
+    .k8s-features-heading {
+      background-color: @surface0 !important;
+    }
+
     // Community CTA button
     body.cid-community a.community-cta-button {
       background-color: @accent !important;
@@ -1168,6 +1172,14 @@
       flex-wrap: wrap !important;
       background-color: @base !important;
       gap: 2rem !important;
+    }
+
+    .feature-box {
+      background-color: @surface0 !important;
+      border-color: @surface1 !important;
+      border-radius: 8px !important;
+      color: @text !important;
+      box-sizing: border-box !important;
     }
 
     .col-nav {
